--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation "com.android.billingclient:billing:$billing_version"
     implementation 'androidx.preference:preference:1.2.1'
     implementation 'com.anjlab.android.iab.v3:library:2.0.0'
+    implementation 'com.yodo1.mas:lite:4.10.0'
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
