--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,8 @@ pluginManagement {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         jcenter()
+        maven { url "https://android-sdk.is.com" }
+        maven { url "https://dl-maven-android.mintegral.com/repository/mbridge_android_sdk_oversea" }
     }
 }
 dependencyResolutionManagement {
@@ -12,6 +14,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url "https://android-sdk.is.com" }
+        maven { url "https://dl-maven-android.mintegral.com/repository/mbridge_android_sdk_oversea" }
         maven { url 'https://jitpack.io' }
         jcenter()
     }
