--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-//    id 'com.google.gms.google-services'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -23,12 +23,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
+    implementation 'com.fxn769:stash:1.3.2'
+    implementation 'com.google.firebase:firebase-database:20.3.0'
 
     def billing_version = "6.0.1"
     implementation "com.android.billingclient:billing:$billing_version"
@@ -49,7 +51,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.jakewharton:butterknife:10.2.3'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-database:20.3.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
     implementation 'com.github.addisonelliott:SegmentedButton:3.1.9'
     implementation 'com.github.marcoscgdev:RateDialog:1.0.7'
