--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.lucky.blocks.mods.mcpeaddons"
@@ -30,7 +30,9 @@ android {
 
 dependencies {
     implementation 'com.fxn769:stash:1.3.2'
-    implementation 'com.google.firebase:firebase-database:20.3.0'
+    implementation platform('com.google.firebase:firebase-bom:32.5.0')
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-analytics'
 
     def billing_version = "6.0.1"
     implementation "com.android.billingclient:billing:$billing_version"
@@ -38,8 +40,8 @@ dependencies {
     implementation 'com.anjlab.android.iab.v3:library:2.0.0'
     implementation 'com.yodo1.mas:lite:4.10.0'
 
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
     implementation 'android.arch.navigation:navigation-common:1.0.0'
