--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.android.library' version '7.4.1' apply false
     id 'androidx.navigation.safeargs.kotlin' version '2.4.0' apply false
     id 'com.google.gms.google-services' version '4.4.0' apply false
+    id 'com.google.firebase.crashlytics' version '2.9.9' apply false
 //    id 'org.jetbrains.kotlin:kotlin-gradle-plugin' version '1.7.1' apply false
 }
 
